Finished gatsby tutorial

--- a/blog/testing-programatically-created-pages/index.mdx
+++ b/blog/testing-programatically-created-pages/index.mdx
@@ -2,6 +2,10 @@
 title: "Testing programatically created pages"
 date: "2021-12-01"
 author: "MrBorges"
+hero_image: "./image4.jpg"
+hero_image_alt: "Beautiful landscape"
+hero_image_credit_text: "John Doe"
+hero_image_credit_link: "https://unsplash.com"
 ---
 This looks like the real jam of Gatsby. 
 
