--- a/blog/hello-world/index.mdx
+++ b/blog/hello-world/index.mdx
@@ -2,6 +2,10 @@
 title: "Hello World"
 date: "2021-11-30"
 author: "MrBorges"
+hero_image: "./image1.jpg"
+hero_image_alt: "Boat floating in water reflecting stars"
+hero_image_credit_text: "Jane Doe"
+hero_image_credit_link: "https://unsplash.com"
 ---
 This is my first blog post! Isn't it *great*?
 Some of my **favorite** things are:
